# bub-xiaoai

./: README.md  pyproject.toml
src/bub_xiaoai/: __init__.py  channel.py  mi.py  plugin.py  static_server.py
src/skills/xiaoai/: SKILL.md
