[project]
name = "bub-xiaoai"
version = "0.1.0"
description = "A Bub channel to communicate with XiaoAi speaker"
readme = "README.md"
authors = [
    { name = "Frost Ming", email = "me@frostming.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "miservice-fork>=2.7.11",
]

[project.entry-points.bub]
xiaoai = "bub_xiaoai.plugin:XiaoAiPlugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "bub",
]

[tool.uv.sources]
bub = { git = "https://github.com/bubbuild/bub.git" }

[tool.pdm.build]
includes = ["src/bub_xiaoai", "src/skills"]
